# CloakLLM-PY

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: _gen_hard_corpus.py  corpus.json  corpus_hard.json  evaluate.py  report_hard.py  xsdk_detection_diff.py
cloakllm/: __init__.py  __main__.py  _canonical.py  _ulid.py  attestation.py  audit.py  bias_detection.py  compliance_report.py  config.py  context_analyzer.py  detector.py  exceptions.py  key_provider.py  llm_detector.py  locale_patterns.py  shield.py  stream.py  timestamping.py  token_spec.py  tokenizer.py
cloakllm/backends/: __init__.py  base.py  llm.py  ner.py  regex.py
cloakllm/integrations/: litellm_middleware.py  openai_middleware.py
examples/: compliance_report_sample.json  compliance_report_sample.md  compliance_report_schema.json  litellm_example.py  standalone.py
tests/: conftest.py  test_api_key_realworld.py  test_attestation.py  test_audit_chain_integrity_error.py  test_audit_chain_restart.py  test_audit_permissions.py  test_audit_schema.py  test_backends.py  test_benchmark.py  test_bias_detection_session.py  test_canonical_consistency.py  test_compliance_mode.py  test_compliance_report.py  test_content_generation.py  test_context_analyzer.py  test_cross_sdk_round_trip.py  test_custom_patterns_validation.py  test_desanitize_hash_oracle.py  test_desanitize_oracle.py  test_detection_v0112.py  test_export_compliance_config_g1.py  test_key_management.py  test_key_manifest.py  test_kms_lazy_init.py  test_litellm_integration.py  test_llm_detector.py  test_locale.py  test_lowercase_token_warning.py  test_middleware_toolcalls.py  test_ner_degradation.py  test_no_pii_in_logs.py  test_openai_integration.py  test_openai_middleware.py  test_path_traversal.py  test_revocation_list.py  test_shield.py  test_ssrf_hardening.py  test_stream.py  test_stream_fuzz.py  test_streaming_audit.py  (+4 more)
tests/fixtures/: _mock_tsa.py  audit_chain_bias_js.jsonl  audit_chain_bias_py.jsonl  audit_chain_js.jsonl  audit_chain_py.jsonl  canonical_corpus.json  certificate_js.json  certificate_py.json  cross_sdk_metadata.json  generate_cross_sdk_fixtures.py  timestamp_token.json
