[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakllm"
version = "0.3.0"
description = "AI Compliance Middleware — PII protection, tamper-evident audit logs, and EU AI Act compliance for LLM gateways"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "The CloakLLM Authors", email = "cloakllm@gmail.com"}
]
keywords = ["llm", "privacy", "pii", "compliance", "eu-ai-act", "litellm", "audit", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "spacy>=3.7.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.40.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
all = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]

[project.scripts]
cloakllm = "cloakllm.__main__:main"

[project.urls]
Homepage = "https://github.com/cloakllm/CloakLLM-PY"
Issues = "https://github.com/cloakllm/CloakLLM-PY/issues"
Repository = "https://github.com/cloakllm/CloakLLM-PY"
Changelog = "https://github.com/cloakllm/CloakLLM-PY/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cloakllm*"]
