[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakllm"
version = "0.6.4"
description = "AI Compliance Middleware — PII protection, tamper-evident audit logs, and EU AI Act compliance for LLM gateways"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "The CloakLLM Authors", email = "cloakllm@gmail.com"}
]
keywords = ["llm", "privacy", "pii", "compliance", "eu-ai-act", "litellm", "audit", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "spacy>=3.7.0",
]

[project.optional-dependencies]
# v0.6.1 H6: bumped litellm floor to 1.83.0 (CVE-2026-35029, -35030, GHSA-69x8-hrgq-fjj8 fixed in 1.83.0).
# v0.6.3 P0-1: pin aiohttp>=3.13.4 (litellm transitive) — fixes 10 CVEs in aiohttp 3.13.3
# (CVE-2026-34513..34520, CVE-2026-22815, CVE-2026-34525). All fixed in aiohttp 3.13.4.
# post-v0.6.4: pin python-dotenv>=1.2.2 (litellm transitive) — fixes CVE-2026-28684.
# Will roll into v0.6.5; metadata-only update unblocks CI in the meantime.
litellm = [
    "litellm>=1.83.0,<2.0.0",
    "aiohttp>=3.13.4",
    "python-dotenv>=1.2.2",
]
attestation = ["pynacl>=1.5.0,<2.0.0"]
kms = [
    "boto3>=1.28,<2.0.0",
    "google-cloud-kms>=2.20,<4.0.0",
    "azure-keyvault-keys>=4.8,<5.0.0",
    "azure-identity>=1.15,<2.0.0",
    "hvac>=2.0,<3.0.0",
]
# v0.6.1 H6: bumped cryptography floor to 46.0.7 (CVE-2026-26007, -34073, -39892 fixed in 46.0.7).
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "cryptography>=46.0.7,<47.0.0", "pip-audit>=2.7"]
all = ["opentelemetry-api>=1.20,<2.0.0", "opentelemetry-sdk>=1.20,<2.0.0"]

[project.scripts]
cloakllm = "cloakllm.__main__:main"

[project.urls]
Homepage = "https://github.com/cloakllm/CloakLLM-PY"
Issues = "https://github.com/cloakllm/CloakLLM-PY/issues"
Repository = "https://github.com/cloakllm/CloakLLM-PY"
Changelog = "https://github.com/cloakllm/CloakLLM-PY/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cloakllm*"]
